# telegram-rest

./: .env.swp  .env_test  .gitignore  README.md  check_entity.py  get_chat_id.py  log.txt  log_sender.session  log_sender.session-shm  log_sender.session-wal  pyproject.toml
telegram_rest/: listener.py  main.py
tests/: test_main.py  test_save_diary_messages.py
